2009-01-10  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=23222

        We need to disable LayoutState when an object has transforms,
        because LayoutState is not transform-aware and therefore
        repaint rects can be computed incorrectly.

        Test: fast/repaint/transform-disable-layoutstate.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock):
        (WebCore::RenderBlock::layoutOnlyPositionedObjects):
        * rendering/RenderFlexibleBox.cpp:
        (WebCore::RenderFlexibleBox::layoutBlock):

Canonical link: https://commits.webkit.org/31979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39781 268f45cc-cd09-0410-ab3c-d52691b4dbfc